@@ -1,0 +1,47 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one
+  or more contributor license agreements.  See the NOTICE file
+  distributed with this work for additional information
+  regarding copyright ownership.  The ASF licenses this file
+  to you under the Apache License, Version 2.0 (the
+  "License"); you may not use this file except in compliance
+  with the License.  You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing,
+  software distributed under the License is distributed on an
+  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  KIND, either express or implied.  See the License for the
+  specific language governing permissions and limitations
+  under the License.
+-->
+<properties>
+  <emitters>
+    <emitter class="org.apache.tika.pipes.emitter.jdbc.JDBCEmitter">
+      <params>
+        <name>jdbc</name>
+        <connection>CONNECTION_STRING</connection>
+        <createTable>create table test
+          (path varchar(512) primary key,
+          k1 varchar(512));
+        </createTable>
+        <!-- the jdbc emitter always puts ths emitKey value as the first
+             item -->
+        <insert>insert into test (path, k1) values (?,?);
+        </insert>
+        <!-- these are the keys in the metadata object.
+            The emitKey is added as the first element in the insert statement.
+            Then the these values are added in order.
+            They must be in the order of the insert statement.
+            -->
+        <keys>
+          <key k="k1" v="varchar(512)"/>
+        </keys>
+        <multivaluedFieldStrategy>concatenate</multivaluedFieldStrategy>
+        <multivaluedFieldDelimiter>, </multivaluedFieldDelimiter>
+      </params>
+    </emitter>
+  </emitters>
+</properties>
